# devadapt

./: Cargo.toml  README.md  devadapt.yaml
examples/: devadapt-sample.json
src/: lib.rs  main.rs
src/data/: mod.rs
src/model/: mod.rs
src/recommend/: mod.rs
tests/: smoke.rs
